[seed] Removed description on painting

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -5,6 +5,7 @@
 'Blog': 'Blog'
 'Contact': 'Contact'
 'Contents rights to Charlie Bréval': 'Contents rights to Charlie Bréval'
+'Oil on canvas': 'Oil on canvas'
 menu_locale:
     en: English
     fr: Français
