--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -5,6 +5,7 @@
 'Blog': 'Blog'
 'Contact': 'Contactez-moi'
 'Contents rights to Charlie Bréval': 'Images réservées à Charlie Bréval'
+'Oil on canvas': 'Huile sur toile'
 menu_locale:
     en: English
     fr: Français
