[seed] Fixed about page

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -12,6 +12,12 @@
 "about.title": "About me - Charlie Bréval paintings"
 "blog.title": "Blog - Charlie Bréval paintings"
 "contact.title": "Contact - Charlie Bréval paintings"
+"about_page":
+    "title": "Who am I ?"
+    "description": "<p> Youg figurative oil painter living in Nantes (France) and born in 1989, 
+    I give to Painting most of my free time, and have a special fascination to this Queen.</p>
+    <p>This one sometimes forget to give it back, but like a great artist said : \"When you pass the door of this workshop, leave any hope\"</p>
+    "
 menu_locale:
     en: English
     fr: Français
